<resources>
    <string name="app_name">EMH</string>
    <string name="subscription">Lorem Ipsum dolor sit amet, consectetur adipisicing elit, sed do.</string>
    <string name="app_full_name">Every Moment Holy</string>
    <string name="register">Register</string>
    <string name="skip_login">Skip Login</string>
    <string name="register_to_continue">Register To Continue</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="first_name">First Name <font color="#FF0000">*</font></string>
    <string name="last_name">Last Name <font color="#FF0000">*</font></string>
    <string name="email">Email <font color="#FF0000">*</font></string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password <font color="#FF0000">*</font></string>
    <string name="hint_email">Email <font color="#FF0000">*</font></string>
    <string name="login">Login</string>
    <string name="i_have_read_and_agree_to_the">I have read and agree to the</string>
    <string name="close">Close</string>
    <string name="your_name">YOUR NAME <font color="#FF0000">*</font></string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password <font color="#FF0000">*</font></string>
    <string name="new_password">New Password <font color="#FF0000">*</font></string>
    <string name="confirm_password">Confirm Password <font color="#FF0000">*</font></string>
    <string name="daily_liturgy_quote">Daily Liturgy Quote</string>
    <string name="open">Open</string>
    <string name="ok">OK</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="read_now">READ NOW</string>
    <string name="rabbit_room">Rabbit Room</string>
    <string name="amazon">Amazon</string>
    <string name="home_frag_des">"&#34;Give us discernment to know when \\n to simply \n shut off our screens and to sit \n quietly in your presence.&#34;"</string>
    <string name="liturgies_name">Liturgies name</string>
    <string name="free">Free</string>
    <string name="purchased">Purchased</string>
    <string name="unlock_collection">Unlock Collection</string>
    <string name="about">About</string>
    <string name="sharetxt">We hope this app will make these liturgies readily available to anyone who needs them, including small groups who would like
    to read a liturgy together even thought some in the group may not own the app.</string>
    <string name="sharetxt1">In order to share a liturgy with others, follow the steps below.</string>
    <string name="step1">1. Tap the &#34;Share&#34; icon on the liturgy you wish to share.</string>
    <string name="step2">2. A small window will open displaying a link. This link is unique and will remain active foe 24 hours.</string>
    <string name="step3">3. Tap the &#34;Share Link&#34; button.</string>
    <string name="step4">4. Select your preferred means of sharing the link  (text message, Facebook, Instagram, etc.).</string>
    <string name="step5">5. Anyone who receives the link will be able to open the liturgy and read it until the link expires.</string>
    <string name="new_passwors">New Passwords</string>
    <string name="unlock">Are you sure want to buy a book without register\login? Please be noted that if you have purchased the book without
    register\login, you will not be able access the same book in another device or platform.</string>
    <string name="shareTxt">"&#34;This link will expire after 24 Hours. For more information see "&#34;How to Share Liturgies"&#34; in the app Menu"&#34; </string>
    <string name="cancel">Cancel</string>
    <string name="share_link">Share Link</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="firstname_error">Please enter first name.</string>
    <string name="lastname_error">Please enter last name.</string>

    <string name="password_error">Please enter password</string>
    <string name="password_char_limit_error">Password must contain at least 6 characters!</string>
    <string name="newpassword_char_limit_error">New password must contain at least 6 characters!</string>
    <string name="confirmpassword_error">Please enter confirm password</string>
    <string name="matchpassword_error">Password and confirm password do not match!</string>
    <string name="newmatchpassword_error">New password and confirm password do not match!</string>
    <string name="reset_matchpassword_error">Password and confirm password do not match!</string>
    <string name="phoneno_error">Please enter phone number.</string>
    <string name="valid_phoneno_error">Please enter valid phone number.</string>
    <string name="email_error">Please enter email address.</string>
    <string name="old_password_error">Please enter old password.</string>
    <string name="new_password_error">Please enter new password.</string>
    <string name="valid_email_error">Please enter valid email address.</string>
    <string name="check_internet">This features of the app requires an internet connection. However, you can still read your available and favorite liturgies while being offline.</string>
    <string name="internet_required">Internet connection is required to perform this action.</string>
    <string name="feature_requires_internet">This features of the app requires an internet connection. However, you can still read your available and favorite liturgies while being offline.</string>
    <string name="liturgy_not_downloaded">This Liturgy is yet to be downloaded. It will get downloaded after your phone gets an internet connection.</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification_code">Verification Code <font color="#FF0000">*</font></string>
    <string name="update_password">Update Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registred_e_mail_id">Registered E-mail ID</string>
    <string name="reset_password_error">Please enter new password.</string>
    <string name="contactus_name_error">Please enter your name.</string>
    <string name="contactus_message_error">Please enter your message.</string>
    <string name="contactus_email_error">Please enter your email.</string>
    <string name="reset_confirmpassword_error">Please enter confirm password.</string>
    <string name="reset_verificationcode_error">Please enter verification code.</string>
    <string name="my_liturgy">My Liturgies</string>
    <string name="please_wait">Loading..</string>
    <string name="registration_succesful">Registration Successful</string>

    <string name="firstName_error">Please enter FirstName.</string>
    <string name="lastName_error">Please enter LastName.</string>

    <string name="share_title">Share Screenshot</string>
    <string name="currently_available_to_all_users">Currently Available to All Users</string>
    <string name="result">Result</string>

    <string name="sample_string">"some test line 1 <br /> some test line 2"</string>
    <string name="sample_string1">Hello&lt;br /&gt;World!</string>

    <string name="nice_html">
<![CDATA[
<p><span style=\"font-family:Verdana,Geneva,sans-serif\">We hope this app will make these liturgies readily available to anyone who needs them, including small groups who would like to read a liturgy together even though some in the&nbsp;group may not own the app. </span></p>"&lt;$1&gt;"<p><span style=\"font-family:Verdana,Geneva,sans-serif\">In order to share a liturgy with others, follow the steps below.</span></p>"&lt;$1&gt;"<p style=\"margin-left:40px\"><span style=\"font-family:Verdana,Geneva,sans-serif\"><strong>1.</strong>&nbsp;Tap the &quot;Share&quot; icon on the liturgy you wish to share.</span></p>\r\n\r\n<p style=\"margin-left:40px\"><span style=\"font-family:Verdana,Geneva,sans-serif\"><strong>2.</strong> A small window will open displaying a link. This link is unique and will remain active for 24 hours.</span></p>\r\n\r\n<p style=\"margin-left:40px\"><span style=\"font-family:Verdana,Geneva,sans-serif\"><strong>3.</strong> Tap the &quot;Share Link&quot; button.</span></p>\r\n\r\n<p style=\"margin-left:40px\"><span style=\"font-family:Verdana,Geneva,sans-serif\"><strong>4. </strong>Select your preferred means of sharing the link (text message, Facebook, Instagram, etc.).</span></p>\r\n\r\n<p style=\"margin-left:40px\"><span style=\"font-family:Verdana,Geneva,sans-serif\"><strong>5.</strong> Anyone who recieves the link will be able to open the liturgy and read it until the link expires.</span></p>
]]>
</string>
    <string name="your_e_mail_address">YOUR E-MAIL ADDRESS <font color="#FF0000">*</font></string>
    <string name="your_message">YOUR MESSAGE <font color="#FF0000">*</font></string>
    <string name="are_you_sure_want_to_buy_a_book_without_register_login">Are you sure want to buy a book without register\\login? Please be noted that if you have purchased the book without register\\login, you will not be able access the same book in another device or platform.</string>
    <string name="need_to_register_login_for_purchase">Please register/login to purchase items.</string>
    <string name="you_need_to_login_first">You need to Login first.</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscribe_for_full_access_to_more_than_200_liturgies">Subscribe for full access to more than 200 liturgies</string>
    <string name="subscribetext">To access all of the prayers and liturgies in the Every Moment Holy series, including audio reading, choose a monthly or annual subscription.\n Unsubscribed users have limited access.</string>
    <string name="message">If you previously purchased content before the app moved to subscription status, that content is available to you through the Liturgies tab on the home screen, and will show as unlocked. \n Any new or "locked" content requires a subscription</string>
    <string name="unlimitedaccess">Unlimited Access to All Content</string>
    <string name="unsubscribestep"><![CDATA[To unsubscribe, Go to Google Play Store --> Click on the Profile icon at top right --> Payment and Subscriptions --> Select the subscription from EMH.]]></string>

    <string name="free_trial_info">
    • The Free trial will be given only for 1st time purchase of the plan.\n
    • For all the plans, the Free trial will be for 7 days.\n
    • You can cancel the plan anytime from the Subscriptions sections in Google Play Store.\n
    Go to Google Play Store → Your name or image on top right corner → Payments and Subscriptions → Subscriptions → Plan name → cancel.\n
    • If you have selected Free trial and if you cancel the plan before 7 days, then you won\'t be charged.\n
    • Google Play Store will send a reminder before the trial ends.\n
    • You can take trial only 1 time. If you cancel the trial and then at some point wish to purchase the plan, then Free trial won\'t be given again.
</string>
    <string name="free_trial_info_title">Free Trial Information</string>
    <string name="free_trial_info_short">
    • A 7-day Free trial will be given only for 1st time purchase of the plan.\n
    • The plan will be renewed automatically.\n
    • You can cancel the plan anytime via the Subscriptions section in the Google Play Store.\n
    • If canceled before 7 days of Free trial, you won’t be charged. A reminder is sent by Google before the trial ends.
    </string>

</resources>