<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sharetxt"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sharetxt1"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/step1"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/step2"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/step3"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/step4"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/step5"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

    </LinearLayout>

</ScrollView>