<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/register_imgsize"
        android:layout_height="@dimen/register_imgsize"
        android:src="@drawable/login_topimg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rgstr_img_margin"
        android:text="@string/login_to_continue"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/rgstr_txtsize" />

    <EditText
        android:id="@+id/edtLoginEmail"
        style="@style/edtStyle"
        android:layout_marginTop="@dimen/rgste_fstnm_margintop"
        android:background="@drawable/bg_register_edt"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edtLoginPassword"
        style="@style/edtStyle"
        android:layout_marginTop="@dimen/rgste_fstnm_margintop"
        android:background="@drawable/bg_register_edt"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txtForgotPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:gravity="right"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_16ssp" />

    <Button
        android:id="@+id/btn_Login"
        style="@style/edtStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:backgroundTint="@color/loginbg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_txtsize" />


</LinearLayout>