<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/register_imgsize"
                android:layout_height="@dimen/register_imgsize"
                android:layout_gravity="center"
                android:src="@drawable/login_topimg" />

            <EditText
                style="@style/edtStyle"
                android:layout_marginTop="@dimen/rgste_margintop"
                android:background="@drawable/bg_register_edt"
                android:hint="@string/old_password" />

            <EditText
                style="@style/edtStyle"
                android:layout_marginTop="@dimen/rgste_fstnm_margintop"
                android:background="@drawable/bg_register_edt"
                android:hint="@string/new_password" />

            <EditText
                style="@style/edtStyle"
                android:layout_marginTop="@dimen/rgste_fstnm_margintop"
                android:background="@drawable/bg_register_edt"
                android:hint="@string/confirm_password" />

        </LinearLayout>


        <Button
            style="@style/edtStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_20sdp"
            android:backgroundTint="@color/loginbg"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_txtsize" />

    </RelativeLayout>


</LinearLayout>