<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/iv_toolbar_backImage"
            android:layout_width="@dimen/toolbar_drawer_imagesize"
            android:layout_height="@dimen/toolbar_drawer_imagesize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_text_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/register_imgsize"
            android:layout_height="@dimen/register_imgsize"
            android:src="@drawable/login_topimg" />

        <TextView
            style="@style/bigTextStyle"
            android:layout_marginTop="@dimen/rgstr_img_margin"
            android:text="@string/reset_password" />

        <EditText
            android:id="@+id/edtResetNewPassword"
            style="@style/edtStyle"
            android:layout_marginTop="@dimen/rgste_fstnm_margintop"
            android:background="@drawable/bg_register_edt"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtResetConfirmPassword"
            style="@style/edtStyle"
            android:layout_marginTop="@dimen/rgste_fstnm_margintop"
            android:background="@drawable/bg_register_edt"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtVerificationCode"
            style="@style/edtStyle"
            android:layout_marginTop="@dimen/rgste_fstnm_margintop"
            android:background="@drawable/bg_register_edt"
            android:hint="@string/verification_code" />

        <Button
            android:id="@+id/btnUpdatePassword"
            style="@style/registerButtonStyle"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/update_password" />

    </LinearLayout>


</RelativeLayout>