<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivClock"
                android:layout_width="@dimen/register_imgsize"
                android:layout_height="@dimen/register_imgsize"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/changepassword_mainimage_margintop"
                android:src="@drawable/login_topimg" />

            <EditText

                android:id="@+id/edtOldPassword"
                style="@style/edtStyle"
                android:layout_below="@+id/ivClock"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/bg_register_edt"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtNewpPassword"
                style="@style/edtStyle"
                android:layout_below="@+id/edtOldPassword"
                android:layout_marginTop="@dimen/editText_margintop"
                android:background="@drawable/bg_register_edt"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtConformPsw"
                style="@style/edtStyle"
                android:layout_below="@+id/edtNewpPassword"
                android:layout_marginTop="@dimen/editText_margintop"
                android:background="@drawable/bg_register_edt"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnSubmitPassword"
                style="@style/edtStyle"
                android:layout_below="@+id/edtConformPsw"
                android:layout_marginTop="@dimen/change_password_submitbtn_margin"
                android:backgroundTint="@color/loginbg"
                android:text="@string/submit" />


        </RelativeLayout>

    </ScrollView>


</LinearLayout>