<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/mainFramelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="@dimen/option_imgsize"
                    android:layout_height="@dimen/option_imgsize"
                    android:src="@drawable/splashimage" />

                <!-- <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_310sdp"
                     android:src="@drawable/splashimage" />-->

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_margin"
                    android:layout_marginTop="@dimen/login_margintop"
                    android:layout_marginRight="@dimen/login_margin"
                    android:backgroundTint="@color/loginbg"
                    android:fontFamily="@font/lato_bold"
                    android:padding="@dimen/login_button_padding"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textSize="@dimen/login_button_txtsize" />

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_margin"
                    android:layout_marginTop="@dimen/register_margintop"
                    android:layout_marginRight="@dimen/login_margin"
                    android:fontFamily="@font/lato_bold"
                    android:padding="@dimen/login_button_padding"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/loginbg"
                    android:textSize="@dimen/login_button_txtsize"
                    app:strokeColor="@color/loginbg" />

                <TextView
                    android:id="@+id/txtSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/skip_margin"
                    android:background="@drawable/txt_buttom_border"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:text="@string/skip_login"
                    android:textAllCaps="true"
                    android:textColor="@color/loginbg"
                    android:textSize="@dimen/skip_txtsize" />

            </LinearLayout>

        </ScrollView>


    </FrameLayout>

</LinearLayout>