<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_7sdp"
            android:gravity="center"
            android:text="@string/app_full_name"
            android:textColor="@color/loginbg"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="#DAD5D5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:background="@drawable/bg_register_edt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edt_share_dialog_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@null"
                android:padding="@dimen/_25sdp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_7sdp"
            android:gravity="center"
            android:text="&#34;This link will expire aftre 24 Hours. For more information see &#34;How to Share Liturgies&#34; in the app Menu&#34;"
            android:textColor="@color/loginbg"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_share_dialog_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_7sdp"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/loginbg"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:strokeColor="@color/loginbg" />

            <Button
                android:id="@+id/btn_share_dialog_share_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_7sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/loginbg"
                android:padding="@dimen/_10sdp"
                android:text="@string/share_link"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>